Add basic appsettings.json for local development

--- a/PA200_webapp/appsettings.json
+++ b/PA200_webapp/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MongoDBDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "NetworkDatabase"
+  },
+  "Jwt": {
+    "Issuer": "http://localhost:7175/",
+    "Audience": "http://localhost:7175/",
+    "Key": "p9g2EwubM6q4vbZr"
+  },
   "AllowedHosts": "*"
 }
